# snpe_resnet

./: .gitignore  CMakeLists.txt  README.md
resnet18/: CMakeLists.txt
resnet18/inc/: resnet18.h  resnet18Impl.h
resnet18/src/: resnet18.cpp  resnet18Impl.cpp
snpetask/: SNPETask.cpp  SNPETask.h
test/test_image/: CMakeLists.txt  config.json  main.cpp
utility/: Logger.h  gettimeofday.c  gettimeofday.h  unpack.c  unparse.c  utils.h  uuid.h  uuidP.h
